test_ringbuffer = executable('test-ringbuffer', 'test_ringbuffer.c',
    include_directories : inc
)
test('test ringbuffera', test_ringbuffer)

test_pcp_2 = executable('loop-pcp-2', 'test_pcp_2.c',
    include_directories : inc
)

test_pcp_3 = executable('loop-pcp-3', 'test_pcp_3.c',
    include_directories : inc
)